Fixes for styling code blocks
Fixes #165

--- a/css/pygments/github.css
+++ b/css/pygments/github.css
@@ -1,5 +1,5 @@
 /*GitHub*/
-%(css_class)s {background-color:#fff;color:#333333;}
+%(css_class)s {background-color:#f7f7f7;color:#333333;}
 %(css_class)s .hll {background-color:#ffffcc;}
 %(css_class)s .c{color:#999988;font-style:italic}
 %(css_class)s .err{color:#a61717;background-color:#e3d2d2}
