--- a/css/pygments/github2014.css
+++ b/css/pygments/github2014.css
@@ -1,4 +1,4 @@
-%(css_class)s {color:#333;background-color:#fff}
+%(css_class)s {color:#333;background-color:#f7f7f7}
 %(css_class)s .hll {background-color: #f8eec7;}
 %(css_class)s .mf{color:#945277}
 %(css_class)s .mh{color:#945277}
